# miscfiles

./: Makefile.am  Makefile.in
debian/: changelog  control  copyright  docs  install  rules  watch
debian/addons/: us-constitution  us-declaration
debian/patches/: 01-Update-Unicode.patch  02-Fix-NA-phone-607.patch  Added-Cities.patch  series
debian/upstream/: metadata  signing-key.asc
